syntax = "proto3";

option go_package = "github.com/castai/egressd/pb";

message RawNetworkMetric {
  int32 src_ip = 1;
  int32 dst_ip = 2;
  int64 tx_bytes = 3;
  int64 tx_packets = 4;
  int64 rx_bytes = 5;
  int64 rx_packets = 6;
  int32 proto = 7;
}

message RawNetworkMetricBatch {
  repeated RawNetworkMetric items = 1;
}

message PodNetworkMetric {
  int32 src_ip = 1;
  string src_pod = 2;
  string src_namespace = 3;
  string src_node = 4;
  string src_zone = 6;
  int32 dst_ip = 7;
  string dst_pod = 8;
  string dst_namespace = 9;
  string dst_node = 10;
  string dst_zone = 11;
  int64 tx_bytes = 12;
  int64 tx_packets = 13;
  int64 rx_bytes = 14;
  int64 rx_packets = 15;
  int32 proto = 16;
}

message PodNetworkMetricBatch {
  repeated PodNetworkMetric items = 1;
}
